timed (2.31) unstable; urgency=low

  * Fixes: NB-210287 - timed doesn't have CAP_SYS_TIME
  * More printing in case of inconsistent user/actdead state
  * removed dependency of the old timehd package
  * Fixes: NB#210336 - pc files
  * Fixes: NB#209981 - less log_info, more log_debug
  * Fixes: NB#208557 - new act-dead / user detection
  * a memory leak fixed

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Wed, 15 Dec 2010 13:18:27 +0200

timed (2.30) unstable; urgency=low

  * Fixes: NB#208737 - setting clock alarm to skipped hour is making timed unusable

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Fri, 03 Dec 2010 16:34:14 +0200

timed (2.29) unstable; urgency=low

  * making time zone handling more strict

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Thu, 02 Dec 2010 14:08:28 +0200

timed (2.28) unstable; urgency=low

  * Fixes: NB#208018 - vesioned dependency on libtimed0

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Mon, 29 Nov 2010 14:21:43 +0200

timed (2.27) unstable; urgency=low

  * Fixed: NB#206854 - timed using qDebug() printing messages to stderr

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Wed, 24 Nov 2010 13:24:39 +0200

timed (2.26) unstable; urgency=low

  * minor fix, timezone setting

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Thu, 18 Nov 2010 23:29:57 +0200

timed (2.25) unstable; urgency=low

  * three more client methods
  * Fixes: NB#203614 - compile headers with QT_NO_CAST_FROM_ASCII
  * less strict security

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Thu, 11 Nov 2010 15:53:57 +0200

timed (2.24) unstable; urgency=low

  * minor fixes, mostly about logging

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Wed, 10 Nov 2010 10:03:03 +0200

timed (2.23) unstable; urgency=low

  * Fixes: NB#202276 - removed bogus token request
  * Script grepping and demangling binaries 
  * reporting isatty(2) value
  * suppress stderr logging if started by startup
  * suppress mangling warning
